# BachelorThesis

./: .gitignore  BORIS_chase_duration.py  BORIS_count_individual_interactions.py  BORIS_count_individual_interactions_light.py  BORIS_count_individual_interactions_lightphases.py  BORIS_count_individual_interactions_overall.py  BORIS_count_individual_interactions_trials.py  BORIS_count_interactions.py  BORIS_count_interactions_trials.py  BORIS_duration_all.py  BORIS_duration_chase.py  BORIS_duration_mouth_aggresion.py  BORIS_duration_shoving.py  BORIS_interaction_overtime_videos_new.py  BORIS_interactioncount_over_time.py  BORIS_interactioncount_over_time_overall.py  BORIS_interactioncount_over_time_trials.py  BORIS_interactioncount_over_time_videos.py  BORIS_interactioncount_trials.py  BORIS_interactions_effect.py  BORIS_interactions_light.py  BORIS_interactions_light_old.py  BORIS_interactions_lightphases.py  BORIS_interactions_on_platform_both.py  BORIS_interactions_on_which_platform.py  BORIS_interactions_on_which_platform_followup.py  BORIS_interactions_over_time_both.py  BORIS_interactions_overall.py  BORIS_interactions_overtime_with_stamps.py  BORIS_stuff.py  BORIS_test.py  BORIS_where_interactions.py  Boris_Test.py  bigtank_temp.py  followup_test.py  functions.py  hideout_comparison.py  hideout_end_comparison.py  main.py  pyproject.toml  (+2 more)
Videos/: BT_Trial10.boris  BT_Trial11.boris  BT_Trial12.boris  BT_Trial3.boris  BT_Trial4.boris  BT_Trial4_Backup.boris  BT_Trial5.boris  BT_Trial6.boris  BT_Trial7.boris  BT_Trial8.boris  Ethogramm_updated.boris  (+10 more)
(+16 files in other folders)
