[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audian",
    "ipython>=9.2.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "typer>=0.15.4",
    "wavetracker",
]

[tool.uv.sources]
audian = { git = "https://github.com/bendalab/audian" }
wavetracker = { git = "https://github.com/weygoldt/wavetracker" }
